deploy/software-factory/pipelines-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: acme
spec:
  ingressClassName: nginx
  rules:
  - host: tekton.demo.jumpstarter.dev 
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
  tls:
  - hosts:
    - tekton.demo.jumpstarter.dev
    secretName: tekton-cert
